Fix loader position. Set title, reset initialScale should work nicely on mobile now. Set to two columns for professors.

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -236,7 +236,7 @@ body {
 
 .loader {
     position: fixed;
-    padding-top: 20%;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
